@@ -23,6 +23,7 @@
 - added: a new route flag type `&group` something like `roles` but groups aren't evaluated
 - added: `route.groups` with defined groups
 - added: `DatabaseBuilder.insert(fn(doc))` can modify a document after `update` or `modify` has `insert` mode
+- added: `DatabaseBuilder.query(code)` can contain a raw JS condition in the form e.g. `doc.age > 18 && doc.age < 33`
 - added: `Database.find2()` performs faster and reverse reading of documents (from end to begin of the file)
 - added: `Database.lock(callback(next))` locks all internal DB operations
 - added: new directory `schemas` with a new configuration item `directory-schemas'
